tests/invalid/function_call_missing_argument.wio
fn Add(x: i32, y: i32) -> i32 {
    return x + y;
}

fn Entry() -> i32 {
    return Add(1, );
}
